# aero4701-obc

./: README.md  autostart.py  debra.service  log.sh  payload_processing_node.py  read_thermistor.py  roscore.service  rotation.py  satellite_pose.srv  temperature.service  timestamps.txt
VL53L7CX_ULD_driver_1.2.10/: changelog.txt
VL53L7CX_ULD_driver_1.2.10/CubeIDE_F401RE_Example/: .cproject  .project  L7cx_f401.ioc
VL53L7CX_ULD_driver_1.2.10/Examples/: Example_1_ranging_basic.c
VL53L7CX_ULD_driver_1.2.10/Platform/: platform.c  platform.h
adcs/: CMakeLists.txt  package.xml
adcs/msg/: imu_data_packet.msg
adcs/scripts/: imu_listener.py  imu_node.py
catkin_ws/devel/: .catkin  .rosinstall
debra/: CMakeLists.txt  package.xml
debra/launch/: debra.launch  debra_i2c_bus.launch  debra_ssh_control.launch
debra/msg/: WOD.msg  WOD_data.msg  payload_data.msg  raw_lidar_data.msg  raw_lidar_msg.msg  satellite_pose.msg
debra/scripts/: debra_node.py  debra_og.py  debra_ssh_control.py
debra_package/: CMakeLists.txt  package.xml
debra_package/nodes/: payload
eps/: CMakeLists.txt  package.xml
eps/msg/: current_voltage.msg
eps/scripts/: eps_node.py
for_pi/: _conversion.py  constants.py  lidar_constants.py  lidar_contants.py  lidar_pi.py  lidar_processing_pi.py  sat_data_simulated.py
kivy_example/: CMakeLists.txt  package.xml  setup.py
kivy_example/config/: demo.yaml  h6_plotjuggler.xml
kivy_example/kivy/: Keypress.kv  amputateControl.kv  batteryIndicator.kv  cleaningIndicator.kv  controlPane.kv  depthGraph.kv  depthIndicator.kv  hullholdControl.kv  inputPasswordPopup.kv  missionNamePopup.kv  noRoscorePopup.kv  nodeIndicatorBar.kv  pointOfInterestLog.kv  rollIndicator.kv  rosbagOptionsPopup.kv  speedIndicator.kv  systemTest.kv  tofIndicator.kv  topside.kv  trajectoryControl.kv  video.kv  visionIndicator.kv  warningPopups.kv
kivy_example/launch/: h6_rqt.launch  h6_rviz.launch  plotjuggler.launch  robot_monitor.launch  seawolf.launch  smach_viewer.launch
kivy_example/rqt/: hullbot.perspective
kivy_example/scripts/: TopsideApp.py
kivy_example/src/seawolf/: __init__.py  seawolf_settings.py
kivy_example/src/seawolf/depreciated/: BatteryDisplay.py  BotConfigurationPane.py  BrushState.py  BrushStatePilotView.py  BuoyancyTestPane.py  ButtonsPane.py  CalibrationPane.py  Compass.py  ImuVisualiserPane.py  InfoPanePilotView.py  LightControlPane.py  MotorTesterPane.py  NodeIndicatorsPilotView.py  NodeStatusPane.py  PodControlPane.py  PodDisplayPane.py  PointOfInterestPilotView.py  ReturnToHome.kv  ReturnToHome.py  RollVisualiserPilotView.py  StateQueueEditor.py  StateQueueSelector.py  StatusPane.py  SystemTestPane.py  Terminal.py  TesterPane.py  TofDisplay.py  TofDisplayPilotView.py  TopicViewPane.py  batterydisplay.kv  botconfigurationpane.kv  brushStatePilotView.kv  brushstate.kv  buttonsPane.kv  calibrationpane.kv  compass.kv  imuvisualiserpane.kv  lightControlPane.kv  motorTesterPane.kv  nodeIndicatorsPilotView.kv  (+13 more)
kivy_example/src/seawolf/utils/: ThreadingSupport.py  boilerplate.py  customWidgets.py  helper_functions.py  led.py  ros_helper.py  snapsplitter.py
kivy_example/src/seawolf/view/: demo_view.py  full_screen.py  pilot_view.py
kivy_example/src/seawolf/widgets/: AmputateControl.py  ArmedIndicator.py  BatteryIndicator.py  ButtonsControl.py  CleaningIndicator.py  ControlPane.py  DepthGraph.py  DepthIndicator.py  ErrorPopups.py  HullholdControl.py  InputPasswordPopup.py  Keypress.py  MissionNamePopup.py  NoRoscorePopup.py  NodeIndicatorBar.py  PointOfInterestLog.py  RollIndicator.py  RosbagOptionsPopup.py  SpeedIndicator.py  StateIndicator.py  SystemTest.py  TofIndicator.py  TrajectoryControl.py  Video.py  VisionIndicator.py  WarningPopups.py  dismissable_popup.py  xmlrpclib_timeout.py
kivy_example/test/: test_cc.py  test_node.py  test_threading_support.py  test_video.py
my_ros_launches/: CMakeLists.txt  package.xml
my_ros_launches/launch/: start_roscore.launch
node_sample/: CMakeLists.txt  package.xml
not_a_package_thermal/: all_2.py  all_thermistors.py  kivy_attempt.py  plot.py  read_chat.py
not_a_package_thermal/old/: deprecated.py  (+2 more)
payload/: CMakeLists.txt  package.xml
telemetry/: CMakeLists.txt  package.xml  setup.py
telemetry/launch/: telemetry.launch
telemetry/scripts/: fake_data_node.py  fake_raw_lidar_node.py  fake_wod_node.py  telemetry_node.py
telemetry/src/AX25UI/: ax25UI.py  ax25UIframe_decoder.py
telemetry/src/transceivers/: _sx126x.py  transceiver.py
temperature_monitor/: CMakeLists.txt  package.xml
thermal/: CMakeLists.txt  package.xml
time_logger/: CMakeLists.txt  package.xml
time_logger/scripts/: time_logger_node.py
(+54 files in other folders)
