<package format="2">
  <name>time_logger</name>
  <version>0.0.0</version>
  <description>The time_logger package</description>

  <maintainer email="debra3@todo.todo">debra3</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
